--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,10 @@
 blinker==1.6.2
 click==8.1.7
+cloudinary==1.34.0
 dnspython==2.4.2
 Flask==2.3.3
 Flask-PyMongo==2.3.0
 itsdangerous==2.1.2
 pymongo==4.5.0
+urllib3==1.26.16
 Werkzeug==2.3.7
